changed target sdk version

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ cefmfcdemo/.vs/
 cefmfcdemo/Debug/libcef.dll
 cefmfcdemo/Debug/cef_sandbox.lib
 cefmfcdemo/Release/libcef.dll
+.vs/CEFMFC/v15/.suo
+.vs/CEFMFC/v15/Browse.VC.db
+.vs/CEFMFC/v15/Solution.VC.db
