New ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-$.obj
+*.obj
+*.exe
+*.pdb
+*.tlog
 Build/
 cefmfcdemo/.vs/
 cefmfcdemo/Debug/libcef.dll
@@ -7,3 +10,37 @@ cefmfcdemo/Release/libcef.dll
 .vs/CEFMFC/v15/.suo
 .vs/CEFMFC/v15/Browse.VC.db
 .vs/CEFMFC/v15/Solution.VC.db
+cefmfcdemo/x64/Debug/cefmfcdemo.log
+cefmfcdemo/x64/Debug/cefmfcdemo.pch
+cefmfcdemo/x64/Debug/cefmfcdemo.res
+cefmfcdemo/x64/Debug/cefmfcdemo.tlog/cefmfcdemo.lastbuildstate
+cefmfcdemo/x64/Debug/cefmfcdemo.tlog/CL.read.1.tlog
+cefmfcdemo/x64/Debug/cefmfcdemo.tlog/CL.write.1.tlog
+cefmfcdemo/x64/Debug/cefmfcdemo.tlog/link.read.1.tlog
+cefmfcdemo/x64/Debug/cefmfcdemo.tlog/link.write.1.tlog
+cefmfcdemo/x64/Debug/cefmfcdemo.tlog/rc.read.1.tlog
+libcef_dll_wrapper/x64/Debug/libcef_d.2715F06A.tlog/CL.read.1.tlog
+libcef_dll_wrapper/x64/Debug/libcef_d.2715F06A.tlog/CL.write.1.tlog
+libcef_dll_wrapper/x64/Debug/libcef_d.2715F06A.tlog/libcef_dll_wrapper.lastbuildstate
+libcef_dll_wrapper/x64/Debug/libcef_dll_wrapper.log
+libcef_dll_wrapper/x64/Debug/libcef_dll_wrapper.pdb
+libcef_dll_wrapper/x64/Debug/libcef_dll_wrapper.log
+libcef_dll_wrapper/x64/Debug/libcef_d.2715F06A.tlog/libcef_dll_wrapper.lastbuildstate
+libcef_dll_wrapper/x64/Debug/libcef_d.2715F06A.tlog/CL.write.1.tlog
+libcef_dll_wrapper/x64/Debug/libcef_d.2715F06A.tlog/CL.read.1.tlog
+cefmfcdemo/x64/Debug/cefmfcdemo.tlog/rc.read.1.tlog
+cefmfcdemo/x64/Debug/cefmfcdemo.tlog/link.write.1.tlog
+cefmfcdemo/x64/Debug/cefmfcdemo.tlog/link.read.1.tlog
+cefmfcdemo/x64/Debug/cefmfcdemo.tlog/CL.write.1.tlog
+cefmfcdemo/x64/Debug/cefmfcdemo.tlog/CL.read.1.tlog
+cefmfcdemo/x64/Debug/cefmfcdemo.tlog/cefmfcdemo.lastbuildstate
+cefmfcdemo/x64/Debug/cefmfcdemo.log
+*.tlog
+libcef_dll_wrapper/x64/Debug/libcef_d.2715F06A.tlog/CL.write.1.tlog
+libcef_dll_wrapper/x64/Debug/libcef_d.2715F06A.tlog/libcef_dll_wrapper.lastbuildstate
+.vs/CEFMFC/v15/Browse.VC.opendb
+.vs/CEFMFC/v15/ipch/52a65cf0e08b7783.ipch
+.vs/CEFMFC/v15/Solution.VC.db-shm
+.vs/CEFMFC/v15/Solution.VC.db-wal
+cefmfcdemo/Debug/cefmfcdemo.ilk
+cefmfcdemo/Debug/libcef_dll_wrapper.lib
