Not needed files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.obj
+*.log
 *.exe
 *.pdb
 *.tlog
@@ -44,3 +45,24 @@ libcef_dll_wrapper/x64/Debug/libcef_d.2715F06A.tlog/libcef_dll_wrapper.lastbuild
 .vs/CEFMFC/v15/Solution.VC.db-wal
 cefmfcdemo/Debug/cefmfcdemo.ilk
 cefmfcdemo/Debug/libcef_dll_wrapper.lib
+*.ipch
+libcef_dll_wrapper.lib
+*.iobj
+*.ipdb
+*.pch
+cmfcdemo.res
+cefmfcdemo/x64/Release/cefmfcdemo.res
+cefmfcdemo/Debug/debug.log
+cefmfcdemo/Release/cefmfcdemo.exe
+cefmfcdemo/x64/Release/cefmfcdemo.log
+cefmfcdemo/x64/Release/cefmfcdemo.tlog/cefmfcdemo.lastbuildstate
+cefmfcdemo/x64/Release/cefmfcdemo.tlog/cefmfcdemo.write.1u.tlog
+cefmfcdemo/x64/Release/cefmfcdemo.tlog/CL.command.1.tlog
+cefmfcdemo/x64/Release/cefmfcdemo.tlog/CL.read.1.tlog
+cefmfcdemo/x64/Release/cefmfcdemo.tlog/CL.write.1.tlog
+cefmfcdemo/x64/Release/cefmfcdemo.tlog/link.read.1.tlog
+cefmfcdemo/x64/Release/cefmfcdemo.tlog/rc.read.1.tlog
+libcef_dll_wrapper/x64/Release/libcef_d.2715F06A.tlog/CL.read.1.tlog
+libcef_dll_wrapper/x64/Release/libcef_d.2715F06A.tlog/CL.write.1.tlog
+libcef_dll_wrapper/x64/Release/libcef_d.2715F06A.tlog/libcef_dll_wrapper.lastbuildstate
+libcef_dll_wrapper/x64/Release/libcef_dll_wrapper.log
