Not needed files

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ libcef_dll_wrapper/x64/Release/libcef_d.2715F06A.tlog/CL.read.1.tlog
 libcef_dll_wrapper/x64/Release/libcef_d.2715F06A.tlog/CL.write.1.tlog
 libcef_dll_wrapper/x64/Release/libcef_d.2715F06A.tlog/libcef_dll_wrapper.lastbuildstate
 libcef_dll_wrapper/x64/Release/libcef_dll_wrapper.log
+libcef_dll_wrapper/x64/Release/libcef_dll_wrapper.Build.CppClean.log
+libcef_dll_wrapper/x64/Release/libcef_dll_wrapper.log
